--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>🚀 Frontend Deployed Using Jenkins</h1>
     <p>This application is deployed automatically using Jenkins and Git.</p>
+    <p>datas are clear</p>
+    
 
     <button onclick="showMessage()">Click Me</button>
 
